fix layout bug
Opening the select2 combobox appends a div to the document body.
When the body style is display:table, this messes up said table.
Fixed by putting all display:table-cell elements into a div of
their own.

--- a/www/css/browse.styl
+++ b/www/css/browse.styl
@@ -41,7 +41,11 @@ body
   margin 0
   height 100%
   width 100%
+
+#body
   display table
+  height 100%
+  width 100%
   position absolute
 
 ul
